--- a/templates/meme_index.html
+++ b/templates/meme_index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Meme Website</title>
+    <title>My Meme Website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="refresh" content="30;url=http://127.0.0.1:8080/">
     <style>
