--- a/FlaskApp_Tutorial/templates/meme_index.html
+++ b/FlaskApp_Tutorial/templates/meme_index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Look at this meme!</title>
+    <title>Check out this meme!!!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="refresh" content="30;url=http://127.0.0.1:8080/">
     <style>
