port changes, Title update

--- a/FlaskApp_Tutorial/templates/meme_index.html
+++ b/FlaskApp_Tutorial/templates/meme_index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-    <title>Check out this meme!!!</title>
+    <title>Memes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="refresh" content="30;url=http://127.0.0.1:8080/">
+    <meta http-equiv="refresh" content="30;url=http://127.0.0.1:8081/">
     <style>
         body {
             background-color:#000000;
